# DB

./: CMakeLists.txt  README.md  btree.cpp  main_slotted_page.cpp  page  page.cpp  slot_header.cpp  slot_header.hpp  slotted_page.pptx  temp.c  temp.cpp  temp2.c  temp2.cpp
